# tencent-goosefs-rust-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PR_DESCRIPTION_BATCH.md  README.md  SECURITY.md  build.rs  license-header.txt  licenserc.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-new-release.md  config.yml
.github/actions/setup/: action.yml
.github/actions/setup-goosefs/: action.yml
.github/workflows/: ci.yml  ci_bindings_python.yml  ci_integration.yml  docs.yml  pr_title.yml
benchmarks/: README.md  cache_evictor_bench.rs  cache_uring_bench.rs  master_hotpath.rs  page_cache_ab.rs  partv_perf_verify.rs  pr_runtime_ab.rs  repro_concurrent_write.rs  repro_writer_write_with_concurrent.rs  sc_pr_ab.rs  tokio_worker_ab.rs
bindings/python/: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  PYPI_README.md  README.md  pyproject.toml
bindings/python/benchmarks/: bench_get_status_hotpath.py  bench_perf_opt.py  bench_pr_concurrency.py  bench_sr_sw.py  run_ab_compare.sh
bindings/python/examples/: 01_quickstart.py  02_async.py  03_streaming.py  04_with_pyarrow.py  05_pandas_csv.py  async_demo.py  batch_files.py  batch_status.py  diagnose_pread.py  page_cache.py  pandas_csv.py  positioned_read.py  quickstart.py  streaming.py  with_pyarrow.py
bindings/python/python/goosefs/: __init__.py  __init__.pyi  exceptions.pyi
bindings/python/src/: config.rs  context.rs  errors.rs  filesystem.rs  lib.rs  options.rs  positioned_read.rs  runtime.rs  status.rs  streaming.rs  sync_fs.rs  tracing.rs  types.rs  worker.rs
bindings/python/tests/: __init__.py  conftest.py  test_atexit.py  test_auth_retry.py  test_config.py  test_errors.py  test_list_status_grouped.py  test_metadata.py  test_page_cache.py  test_read_write.py  test_streaming_async.py  test_streaming_sync.py  test_sync.py  test_tracing.py  test_worker_block_direct.py
docs/: CACHE_THROUGH_WRITE_BUG.md  CLIENT_CONFIGURATION.md  CLIENT_PAGE_CACHE_DESIGN.md  CLIENT_PAGE_CACHE_IO_URING_DESIGN.md  CODE_REVIEW_0.1.5.md  FLAMEGRAPH_OPTIMIZATION_PLAN.md  GOOSEFS_LANCE_GRPC_DESIGN.md  GooseFS_Lance_gRPC_Implementation.md  Lance_GooseFS_E2E_Test_Plan.md  METRICS.md  PAGE_CACHE_VS_SHORT_CIRCUIT.md  PYTHON_RELEASE.md  PYTHON_SDK_PERFORMANCE_OPTIMIZATION_ANALYSIS.md  READER_CACHE_SC_PROGRESS.md  RELEASE.md  RELEASE_CHECKLIST.md  RUST_PYTHON_SDK_OPTIMIZATION.md  RUST_SDK_CONCURRENCY.md  SHORT_CIRCUIT_DESIGN.md  SHORT_CIRCUIT_IO_URING_FEASIBILITY.md  multi-master-support-plan.md
docs/perf/2026-06-24-sc-pr-ab/: README.md
docs/release/: PYTHON_RELEASE.md  RELEASE.md
examples/: async_persistence.rs  async_read_trait.rs  auth_demo.rs  context_file_rw.rs  ha_multi_master.rs  highlevel_file_rw.rs  lowlevel_block_read.rs  lowlevel_create_file.rs  metadata_crud.rs  metrics_heartbeat.rs  metrics_pushgateway.rs  page_cache_demo.rs  reader_page_cache_demo.rs  repro_writer_write_with_concurrent.rs  seekable_file_read.rs  short_circuit_demo.rs  streaming_file_read.rs  write_types.rs
fixtures/goosefs/: docker-compose-goosefs.yml
proto/grpc/: block_worker.proto  common.proto  file_system_master.proto  fscommon.proto  metric_master.proto  version.proto  worker_manager_master.proto
proto/grpc/sasl/: sasl_server.proto
proto/proto/dataserver/: protocol.proto  status.proto
proto/proto/security/: capability_token.proto  token.proto
proto/proto/shared/: acl.proto  location.proto
scripts/ci/: check_license_headers.py  goosefs-down.sh  goosefs-up.sh  pr_title_check.py  run_python_benchmarks.sh  run_python_examples.sh  run_rust_benchmarks.sh  run_rust_examples.sh  run_rust_integration.sh
scripts/hooks/: install-hooks.sh  pre-commit
scripts/release/: python.sh  rust.sh
src/: config.rs  context.rs  error.rs  file_info_cache.rs  lib.rs  retry.rs
src/auth/: authenticator.rs  mod.rs  sasl_client.rs
src/block/: mapper.rs  mod.rs  router.rs
src/block/short_circuit/: factory.rs  mod.rs  reader.rs  sigbus.rs
src/cache/: allocator.rs  caching_reader.rs  manager.rs  metrics.rs  mod.rs  options.rs  page_id.rs
src/cache/evictor/: lfu.rs  lru.rs  mod.rs  moka_evictor.rs
src/cache/store/: local.rs  mod.rs
src/cache/store/uring/: driver.rs  future.rs  mod.rs  requests.rs  store.rs  sys.rs
src/client/: master.rs  master_inquire.rs  metrics_master.rs  mod.rs  worker.rs  worker_manager.rs
src/fs/: base_filesystem.rs  filesystem.rs  mod.rs  options.rs  uri_status.rs  write_type.rs
src/io/: async_reader.rs  file_in_stream.rs  file_reader.rs  file_writer.rs  mod.rs  range_coalesce.rs  reader.rs  writer.rs
src/metrics/: heartbeat.rs  mod.rs  pushgateway.rs  registry.rs  reporter.rs
tests/: auth_retry.rs  connection_reuse.rs  master_rename_no_replace.rs  metrics_heartbeat.rs  page_cache_consistency.rs  page_cache_e2e.rs  sc_consistency.rs  sc_inv_s3.rs  short_circuit_e2e.rs
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: index.md
website/docs/developer-guide/: contributing.md
website/docs/release/: python-release.md  rust-release.md
website/docs/user-guide/python/: batch-api.md  concurrency.md  configuration.md  errors.md  filesystem-api.md  installation.md  metrics.md  page-cache.md  quickstart.md  short-circuit.md  streaming.md  worker-block-read.md
website/docs/user-guide/python/example/: index.md
website/docs/user-guide/rust/: configuration.md  filesystem-api.md  installation.md  metrics.md  page-cache.md  short-circuit.md
website/docs/user-guide/rust/example/: index.md
website/src/css/: custom.css
website/static/: manifest.json
